--- a/src/assets/css/components/stats.scss
+++ b/src/assets/css/components/stats.scss
@@ -81,3 +81,8 @@
     }
 }
 
+@include MobileSmall {
+  .c-stats__grid {
+    flex-direction: column;
+  }
+}
