--- a/src/assets/css/footer.scss
+++ b/src/assets/css/footer.scss
@@ -48,12 +48,12 @@
 
 @include Mobile {
     .footer {
-        font-size: toRem(12);
+      font-size: toRem(12);
+      flex-direction: column;
+      align-items: flex-start;
     }
-}
 
-@include MobileSmall {
-  a:first-child {
-    margin-right: 5px;
-  }
+    .container {
+      margin: 0;
+    }
 }
